# py-amqp

./: .bumpversion.cfg  .bumversion.cfg  .cookiecutterrc  .coverage  .coveragerc  .gitignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  Cargo.toml  Changelog  Dockerfile  MANIFEST.in  Makefile  README  README.rst  amqp.py  appveyor.yml  conftest.py  pavement.py  setup.cfg  setup.py  test.py  test_receive.py  tox.ini  wait_for_rabbitmq.sh
.github/: workflow.yaml
aioamqp/: __init__.py  abstract_channel.py  basic_message.py  channel.py  connection.py  five.py  promise.py  serialization.py  transport.py
amqp/: __init__.py  abstract.py  abstract_channel.pxd  abstract_channel.py  basic_message.pxd  basic_message.py  channel.py  client.py  client_0_8.py  connection.py  events.py  exceptions.py  five.py  method_framing.pxd  method_framing.py  platform.py  promise.py  protocol.py  sasl.py  serialization.pxd  serialization.py  spec.py  test.py  transport.py  types.py  util.py  utils.pxd  utils.py
amqplib/: client_0_8.py  nbclient_0_8.py  threaded_client_0_8.py  util_0_8.py
debian/: changelog  clean  control  copyright  python-amqp-doc.doc-base  python-amqp-doc.docs  python-amqp-doc.links  rules  upstream-signing-key.pgp  watch
demo/: amqp_clock.py  demo_receive.py  demo_send.py  nbdemo_receive.py
demos/: demo_receive.py  demo_send.py  test_receive.py  test_send.py
docs/: code_layout.txt  conf.py  index.rst  overview.txt
examples/: test.py
extra/: generate_skeleton_0_8.py  update_comments_from_spec.py
funtests/: run_all.py  (+7 more)
(+952 files in other folders)
