[package]
name = "amqp-serialization"
version = "0.1.0"
authors = ["Omer Katz <omer.drow@gmail.com>"]

[lib]
name = "amqp_serialization"
crate-type = ["cdylib"]

[dependencies]
# pyo3 = { version = "0.6.0-alpha.4", features = ["extension-module"] }
pyo3 = { git = "https://github.com/thedrow/pyo3", branch = "list-with-capacity", features = ["extension-module"] }
byteorder = "1.3.1"
lazy_static = "1.3.0"
