[package]
name = "amqp-serialization"
version = "0.1.0"
authors = ["Omer Katz <omer.drow@gmail.com>"]

[lib]
name = "amqp_serialization"
crate-type = ["cdylib"]

[dependencies]
# pyo3 = { version = "0.6.0-alpha.4", features = ["extension-module"] }
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "master", features = ["extension-module"] }
byteorder = "1.3.1"
lazy_static = "1.3.0"
