[tool:pytest]
testpaths = t/unit/ t/integration/
python_classes = test_*

[bdist_rpm]
requires = vine

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
ignore = N806, N802, N801, N803

[pep257]
ignore = D102,D104,D203,D105,D213

[bdist_wheel]
universal = 0

[metadata]
license_file = LICENSE
